Edits trying to fix early phase errors

--- a/hybrid_fvm_pinn/phaseComplete.ipynb
+++ b/hybrid_fvm_pinn/phaseComplete.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1c8b243f",
    "metadata": {},
    "outputs": [],
@@ -47,10 +47,10 @@
     "W_RES  = 0.05   # Phase 4\n",
     "W_ROLL = 1.0   # Phase 5\n",
     "\n",
-    "# Rollout horizon for Phase 5 (in \"saved-snapshot time steps\")\n",
+    "# Rollout horizon for Phase 5\n",
     "K_ROLL = 8\n",
     "\n",
-    "# Optimizer (single optimizer across all phases = linked training)\n",
+    "# Optimizer\n",
     "optimizer = tf.keras.optimizers.Adam(1e-4)\n"
    ]
   },
@@ -3384,7 +3384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "3222b06c",
    "metadata": {},
    "outputs": [],
@@ -3453,9 +3453,6 @@
     "        met = item[\"met\"]\n",
     "        x = item[\"x\"]\n",
     "\n",
-    "        # final profiles\n",
-    "        # reconstruct reference and traj are in met curves implicitly, but we didn’t store traj arrays.\n",
-    "        # We can still show curves: error/entropy/TV/mass over time.\n",
     "        t = np.arange(met[\"K\"])  # step index\n",
     "\n",
     "        plt.figure(figsize=(7,3))\n",
@@ -4984,7 +4981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f2191af0",
    "metadata": {},
    "outputs": [],
@@ -5013,8 +5010,6 @@
     "T  = 0.5\n",
     "cfl = 0.25\n",
     "\n",
-    "# If stable_dt_weno is incomplete in your local reference_solver.py,\n",
-    "# we will pass an explicit dt to the reference solver.\n",
     "# Choose a conservative fine dt:\n",
     "dt_fine = 0.10 * (L / N_fine)  # safe default for Burgers advection; reduce if needed\n",
     "save_every = 1  # keep last snapshot (or set >1 to save fewer)\n",
